[metadata]
name = galaxy_importer
author = Red Hat, Inc.
author_email = info@ansible.com
license = Apache-2.0
url = https://github.com/ansible/galaxy-importer
description = Galaxy content importer
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.9

install_requires =
    ansible-core
    ansible-builder>=1.2.0,<4.0
    ansible-lint>=6.2.2,<=24.7.0
    attrs>=21.4.0,<23
    bleach>=3.3.0,<4
    bleach-allowlist>=1.0.3,<2
    flake8>=5.0.0,<8
    markdown>=3.3.4,<4
    pyyaml>=5.4.1,<7
    requests>=2.28.0,<3
    semantic-version>=2.9.0,<3
    setuptools # needed for pkg_resources import

[options.extras_require]
dev =
    black>=21.7b0
    GitPython>=3.1.20
    pyfakefs>=4.4.0,<5; python_version < "3.12"
    pyfakefs>=5.3.0; python_version >= "3.12"
    pytest>=7.0.0,<8
    pytest-cov>=3.0.0,<5
    pytest_mock>=3.8.0,<4
    towncrier

[options.package_data]
galaxy_importer =
    utils/spdx_licenses.json
    ansible_test/job_template.yaml
    ansible_test/container/Dockerfile
    ansible_test/container/entrypoint.sh
    ansible_test/container/eda/tox.ini


[coverage:report]
fail_under = 95.50
precision = 2
