[metadata]
name = galaxy_importer
author = Red Hat, Inc.
author_email = info@ansible.com
license = Apache-2.0
url = https://github.com/ansible/galaxy-importer
description = Galaxy content importer
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:

install_requires =
    ansible-core
    ansible-builder>=1.2.0,<4.0
    ansible-lint>=6.2.2,<=24.9.0
    attrs>=21.4.0,<23
    nh3>=0.2.18,<3  # replaces bleach
    flake8>=5.0.0,<7
    markdown>=3.3.4,<4
    pyyaml>=5.4.1,<7
    requests>=2.28.0,<3
    semantic-version>=2.9.0,<3
    packaging>=23.2,<25.0

[options.extras_require]
dev =
    black>=21.7b0
    GitPython>=3.1.20
    pyfakefs>=5.7.1,<6
    pytest>=7.0.0,<8
    pytest-cov>=3.0.0,<5
    pytest_mock>=3.8.0,<4
    towncrier
    ruff

[options.package_data]
galaxy_importer =
    utils/spdx_licenses.json
    ansible_test/job_template.yaml
    ansible_test/container/Dockerfile
    ansible_test/container/entrypoint.sh
    ansible_test/container/eda/tox.ini
